[package]
name = "libyobicash"
version = "0.9.0"
authors = ["Christian Nyumbayire <chritchens@gmail.com>"]
links = "ctaes"
build = "build.rs"

[build-dependencies]
cc = "^1"

[dependencies]
chrono = "^0.4"
semver = "^0.8"
num-traits = "^0.1"
num-bigint = "^0.1"
rand = "^0.3"
byteorder = "^1.1"
subtle = "^0.3"
arrayref = "^0.3"
typenum = "^1.9"
generic-array = "^0.8"
digest = "^0.6"
sha2 = "^0.6"
hmac = "^0.4"
hkdf = "^0.2"
curve25519-dalek = "0.12.1"
error-chain = "^0.11"
rustc-serialize = "^0.3"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
libc = "^0.2"

[workspace]
members = ["yobipyll"]


