[package]
name = "libyobicash"
version = "0.9.1"
authors = ["Christian Nyumbayire <chritchens@gmail.com>"]
links = "ctaes"
build = "build.rs"

[build-dependencies]
cc = "^1"

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
semver = { version = "^0.9", features = ["serde"] }
num-traits = "^0.1"
num-bigint = "^0.1"
rand = "^0.3"
byteorder = "^1.1"
subtle = "^0.3"
arrayref = "^0.3"
typenum = "^1.9"
generic-array = { version = "^0.8", features = ["serde"] }
digest = "^0.6"
sha2 = "^0.6"
hmac = "^0.4"
hkdf = "^0.2"
curve25519-dalek = { version = "^0.14", features = ["serde"] }
error-chain = "^0.11"
rustc-serialize = "^0.3"
serde = "^1"
serde_derive = "^1"
libc = "^0.2"

[workspace]
members = ["yobipyll"]


