[package]
name = "yobipyll"
version = "0.1.0"
authors = ["Gareth Nelson <gareth@yobicash.org>"]
build = "build.rs"

[lib]
name = "yobipyll"
crate-type = ["cdylib"]

[build-dependencies]
built = "0.1"

[dependencies.libyobicash]
path = ".."

[dependencies.pyo3]
version = "0.2"
features = ["extension-module"]

